--- a/index.html
+++ b/index.html
@@ -46,16 +46,16 @@
                 position: absolute;
                 top: 50%;
                 transform: translate(-50%, -50%);
-                left: 83%;
+                left: 84%;
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
                 align-items: center;
-                gap: 2vh;
+                gap: 1vh;
                 width: 15%;
                 max-width: 300px;
                 height: 80vh;
-                padding: 2vh 0;
+                padding: 18% 3% 10% 0;
             }
 
             .boton {
@@ -165,13 +165,15 @@
                 transform: scale(1.1);
             }
             #botonFormulario {
-               position: absolute;
-               top: 50%;
-               transform: translateY(-50%);
-               left: 25%;
-               width: 15%;
-               max-width: 280px;
-               max-height: 18vh;
+                position: absolute;
+                top: 79%;
+                transform: translateY(-50%);
+                left: 22%;
+                width: 25%;
+                max-width: 500px;
+                min-width: 350px;
+                aspect-ratio: 1/1;
+                object-fit: contain;
             }
             #closeForm {
                 width: 5%;
@@ -180,6 +182,16 @@
                 align-items: center;
                 text-align: center;
                 padding-bottom: 2px;
+            }
+
+            /* Para ordenadores (1366px y superiores) */
+            @media screen and (min-width: 1366px) and (max-width: 1919px) {
+                #botonFormulario {
+                    width: 28%;
+                    left: 7%;
+                    max-width: 450px;
+                    min-width: 320px;
+                }
             }
 
             /* Para tablets en modo landscape (1920x1200) */
@@ -191,8 +203,8 @@
                 }
 
                 .botones-container {
-                    gap: 3vh;
-                    width: 13%;
+                    gap: 1vh;
+                    width: 11%;
                     height: 85vh;
                 }
 
@@ -201,8 +213,9 @@
                 }
 
                 #botonFormulario {
-                    width: 13%;
-                    max-height: 20vh;
+                    width: 23%;
+                    max-width: 500px;
+                    min-width: 380px;
                 }
             }
 
@@ -225,9 +238,20 @@
                 }
 
                 #botonFormulario {
-                    width: 18%;
+                    width: 30%;
                     left: 20%;
-                    max-height: 16vh;
+                    max-width: 550px;
+                    min-width: 400px;
+                }
+            }
+
+            /* Para monitores grandes (más de 2560px) */
+            @media screen and (min-width: 2560px) {
+                #botonFormulario {
+                    width: 20%;
+                    max-width: 600px;
+                    min-width: 450px;
+                    left: 18%;
                 }
             }
         </style>
