--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
             .container {
                 width: 100%;
-                height: 100%;
+                height: 100vh;
                 position: relative;
                 display: flex;
                 justify-content: center;
@@ -36,6 +36,9 @@
             }
 
             .background-image {
+                position: absolute;
+                top: 0;
+                left: 0;
                 width: 100%;
                 height: 100%;
                 object-fit: cover;
@@ -166,10 +169,11 @@
             }
             #botonFormulario {
                 position: absolute;
-                top: 79%;
-                transform: translateY(-50%);
-                left: 22%;
-                width: 25%;
+                top: 65%;
+                bottom: 15%;
+                left: 15%;
+                right: 60%;
+                width: auto;
                 max-width: 500px;
                 min-width: 350px;
                 aspect-ratio: 1/1;
@@ -187,8 +191,8 @@
             /* Para ordenadores (1366px y superiores) */
             @media screen and (min-width: 1366px) and (max-width: 1919px) {
                 #botonFormulario {
-                    width: 28%;
-                    left: 7%;
+                    left: 5%;
+                    right: 67%;
                     max-width: 450px;
                     min-width: 320px;
                 }
@@ -197,8 +201,8 @@
             /* Para tablets en modo landscape (1920x1200) */
             @media screen and (min-width: 1920px) {
                 .background-image {
-                    height: 100vh;
-                    width: 100vw;
+                    width: 100%;
+                    height: 100%;
                     object-fit: cover;
                 }
 
@@ -209,22 +213,23 @@
                 }
 
                 .boton {
-                    max-height: 20vh;
+                    max-height: 25vh;
                 }
 
                 #botonFormulario {
-                    width: 23%;
-                    max-width: 500px;
-                    min-width: 380px;
+                    left: 20%;
+                    right: 45%;
+                    max-width: 600px;
+                    min-width: 450px;
                 }
             }
 
             /* Para tablets en modo portrait */
             @media screen and (max-width: 1200px) {
                 .background-image {
-                    height: 100vh;
-                    width: auto;
-                    max-width: none;
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
                 }
 
                 .botones-container {
@@ -238,8 +243,8 @@
                 }
 
                 #botonFormulario {
-                    width: 30%;
-                    left: 20%;
+                    left: 15%;
+                    right: 55%;
                     max-width: 550px;
                     min-width: 400px;
                 }
@@ -248,10 +253,10 @@
             /* Para monitores grandes (más de 2560px) */
             @media screen and (min-width: 2560px) {
                 #botonFormulario {
-                    width: 20%;
+                    left: 13%;
+                    right: 67%;
                     max-width: 600px;
                     min-width: 450px;
-                    left: 18%;
                 }
             }
         </style>
