--- a/pdf1.html
+++ b/pdf1.html
@@ -8,8 +8,8 @@
         body {
             margin: 0;
             padding: 0;
-            width: 100vw;
-            min-height: 100vh;
+            width: 100%;
+            height: 100%;
             background-color: #000;
             overflow-x: hidden;
             overflow-y: auto;
@@ -17,20 +17,23 @@
             justify-content: center;
         }
 
-        .pdf-container {
+        .pdf-viewer-container {
             width: 100%;
+            min-height: 100%;
             position: relative;
             display: flex;
             flex-direction: column;
             align-items: center;
             background-color: #000;
-            padding: 20px 0;
+            padding: 0;
         }
 
-        .pdf-page {
+        .pdf-viewer-page {
             width: 100%;
             height: auto;
+            max-width: 1920px;
             display: block;
+            object-fit: contain;
             pointer-events: none;
             -webkit-user-select: none;
             -moz-user-select: none;
@@ -38,7 +41,7 @@
             user-select: none;
         }
 
-        .home-button {
+        .pdf-home-button {
             position: fixed;
             top: 20px;
             right: 20px;
@@ -50,39 +53,33 @@
             filter: drop-shadow(0 0 4px rgba(0,0,0,0.5));
         }
 
-        .home-button:hover {
+        .pdf-home-button:hover {
             transform: scale(1.1);
         }
 
         /* Para tablets en modo landscape (1920x1200) */
-        @media screen and (min-width: 1920px) {
-            .pdf-page {
-                width: 1920px;
-            }
-
-            .home-button {
-                width: 70px;
+        @media screen and (width: 1920px) {
+            .pdf-viewer-page {
+                width: 100%;
+                height: auto;
             }
         }
 
         /* Para tablets en modo portrait */
         @media screen and (max-width: 1200px) {
-            .pdf-page {
+            .pdf-viewer-page {
                 width: 100%;
-            }
-
-            .home-button {
-                width: 50px;
+                height: auto;
             }
         }
     </style>
 </head>
 <body>
-    <div class="pdf-container">
-        <img src="src/img/pdfs/Fatiga-1.png" alt="Fatiga" class="pdf-page">
+    <div class="pdf-viewer-container">
+        <img src="src/img/pdfs/Fatiga-1.png" alt="Fatiga" class="pdf-viewer-page">
     </div>
     <a href="index.html">
-        <img src="src/img/Recurso 8.png" alt="Volver al inicio" class="home-button">
+        <img src="src/img/Recurso 8.png" alt="Volver al inicio" class="pdf-home-button">
     </a>
 </body>
 </html> 
