--- a/pdf4.html
+++ b/pdf4.html
@@ -15,6 +15,11 @@
             overflow-y: auto;
             display: flex;
             justify-content: center;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
+            -webkit-touch-callout: none;
         }
 
         .pdf-viewer-container {
@@ -26,6 +31,11 @@
             align-items: center;
             background-color: #000;
             padding: 0;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
+            -webkit-touch-callout: none;
         }
 
         .pdf-viewer-page {
@@ -39,6 +49,14 @@
             -moz-user-select: none;
             -ms-user-select: none;
             user-select: none;
+            -webkit-user-drag: none;
+            -khtml-user-drag: none;
+            -moz-user-drag: none;
+            -o-user-drag: none;
+            user-drag: none;
+            -webkit-touch-callout: none;
+            pointer-events: none;
+            touch-action: none;
         }
 
         .pdf-home-button {
