--- a/pdf4.html
+++ b/pdf4.html
@@ -94,7 +94,7 @@
 </head>
 <body>
     <div class="pdf-viewer-container">
-        <img src="src/img/pdfs/Interacciones-1.png" alt="Interacciones" class="pdf-viewer-page">
+        <img src="src/img/pdfs/salud-1.png" alt="salud" class="pdf-viewer-page">
     </div>
     <a href="index.html">
         <img src="src/img/Recurso 8.png" alt="Volver al inicio" class="pdf-home-button">
