--- a/pdf3.html
+++ b/pdf3.html
@@ -100,7 +100,7 @@
 </head>
 <body>
     <div class="pdf-viewer-container">
-        <img src="src/img/pdfs/Dolor-1.png" alt="Dolor" class="pdf-viewer-page">
+        <img src="src/img/pdfs/Interacciones-1.png" alt="Dolor" class="pdf-viewer-page">
     </div>
     <a href="index.html">
         <img src="src/img/Recurso 8.png" alt="Volver al inicio" class="pdf-home-button">
