--- a/index.html
+++ b/index.html
@@ -169,13 +169,13 @@
             }
             #botonFormulario {
                 position: absolute;
-                top: 65%;
+                top: 70%;
                 bottom: 15%;
-                left: 15%;
+                left: 20%;
                 right: 60%;
                 width: auto;
-                max-width: 500px;
-                min-width: 350px;
+                max-width: 25%;
+                min-width: 25%;
                 aspect-ratio: 1/1;
                 object-fit: contain;
             }
@@ -191,7 +191,7 @@
             /* Para ordenadores (1366px y superiores) */
             @media screen and (min-width: 1366px) and (max-width: 1919px) {
                 #botonFormulario {
-                    left: 5%;
+                    left: 15%;
                     right: 67%;
                     max-width: 450px;
                     min-width: 320px;
@@ -217,10 +217,10 @@
                 }
 
                 #botonFormulario {
-                    left: 20%;
+                    left: 25%;
                     right: 45%;
-                    max-width: 600px;
-                    min-width: 450px;
+                    max-width: 25%;
+                    min-width: 25%;
                 }
             }
 
@@ -243,20 +243,20 @@
                 }
 
                 #botonFormulario {
-                    left: 15%;
+                    left: 20%;
                     right: 55%;
-                    max-width: 550px;
-                    min-width: 400px;
+                    max-width: 25%;
+                    min-width: 25%;
                 }
             }
 
             /* Para monitores grandes (más de 2560px) */
             @media screen and (min-width: 2560px) {
                 #botonFormulario {
-                    left: 13%;
+                    left: 20%;
                     right: 67%;
-                    max-width: 600px;
-                    min-width: 450px;
+                    max-width: 25%;
+                    min-width: 25%;
                 }
             }
 
