--- a/index.html
+++ b/index.html
@@ -391,14 +391,15 @@
         <!-- Service Worker Registration -->
         <script>
             if ('serviceWorker' in navigator) {
-                window.addEventListener('load', () => {
-                    navigator.serviceWorker.register('/sw.js')
-                        .then(registration => {
-                            console.log('Service Worker registrado con éxito:', registration);
-                        })
-                        .catch(error => {
-                            console.log('Error al registrar el Service Worker:', error);
+                window.addEventListener('load', async () => {
+                    try {
+                        const registration = await navigator.serviceWorker.register('./sw.js', {
+                            scope: './'
                         });
+                        console.log('Service Worker registrado con éxito:', registration.scope);
+                    } catch (error) {
+                        console.error('Error al registrar el Service Worker:', error);
+                    }
                 });
             }
         </script>
