--- a/index.html
+++ b/index.html
@@ -393,8 +393,8 @@
             if ('serviceWorker' in navigator) {
                 window.addEventListener('load', async () => {
                     try {
-                        const registration = await navigator.serviceWorker.register('./sw.js', {
-                            scope: './'
+                        const registration = await navigator.serviceWorker.register('/Totem2/sw.js', {
+                            scope: '/Totem2/'
                         });
                         console.log('Service Worker registrado con éxito:', registration.scope);
                     } catch (error) {
