--- a/index.html
+++ b/index.html
@@ -393,8 +393,8 @@
             if ('serviceWorker' in navigator) {
                 window.addEventListener('load', async () => {
                     try {
-                        const registration = await navigator.serviceWorker.register('@https://jeanb1992.github.io/Totem2/sw.js', {
-                            scope: '@https://jeanb1992.github.io/Totem2/'
+                        const registration = await navigator.serviceWorker.register('/sw.js', {
+                            scope: '/'
                         });
                         console.log('Service Worker registrado con éxito:', registration.scope);
                     } catch (error) {
