--- a/index.html
+++ b/index.html
@@ -393,10 +393,15 @@
             if ('serviceWorker' in navigator) {
                 window.addEventListener('load', async () => {
                     try {
-                        const registration = await navigator.serviceWorker.register('/sw.js', {
-                            scope: '/'
+                        const registration = await navigator.serviceWorker.register('sw.js', {
+                            scope: './'
                         });
                         console.log('Service Worker registrado con éxito:', registration.scope);
+                        
+                        // Forzar pantalla completa al inicio
+                        if (!document.fullscreenElement) {
+                            await document.documentElement.requestFullscreen();
+                        }
                     } catch (error) {
                         console.error('Error al registrar el Service Worker:', error);
                     }
